## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

noinst_HEADERS = \
	tm_file_entry.h\
	tm_symbol.h\
	tm_work_object.h\
	tm_project.h\
	tm_tag.h\
	tm_workspace.h\
	tm_source_file.h
